# employee

./: CMakeLists.txt  README  README.md  employee.conf
include/: emp_comm.h
src/: Makefile  employee.c
src/cfg/: Makefile  emp_conf_file.c  emp_conf_file.h
src/db/: Makefile  emp_db.c  emp_db.h
src/log/: Makefile  emp_log.c  emp_log.h
src/user/: Makefile  emp_user.c  emp_user.h
